--- a/Frontend/assets/css/style.css
+++ b/Frontend/assets/css/style.css
@@ -3,15 +3,68 @@ body {
   height: 80%;
   background-size: cover;
   background-color: bisque;
-  font-family: "Montserrat", sans-serif;
-  color: yellowgreen;
+  font-family: 'PT Serif', serif;
+  color: #c9cbca;
 }
 #main{
-  text-align: center;
-  margin: 0;
+  /* text-align: center; */
+  text-align: left;
+  width: 25%;
+  margin-left: 70%;
+  margin-top: 6%;
   position: absolute;
-  top: 50%;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 20px;
+  border: solid #4480a4 3px;
+  /* top: 50%;
   left: 50%;
   -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%); */
+
+}
+#reset{
+  margin-top: 15px;
+  height: 30px;
+  width: 150px;
+  background-color: orange;
+  border-color: orange;
+  color: white;
+  border-radius: 25px / 17px;
+}
+#quit{
+  margin-top: 15px;
+  height: 30px;
+  width: 100px;
+  background-color: #bd3030;
+  border-color: #bd3030;
+  color: white;
+  border-radius: 25px / 17px;
+}
+#select{
+  width: 210px;
+  height: 23px;
+}
+#go{
+  margin-top: 15px;
+  height: 30px;
+  width: 100px;
+  background-color: greenyellow;
+  border-color: greenyellow;
+  color: white;
+  border-radius: 25px / 17px;
+
+}
+#toSearch{
+  height: 23px;
+  width: 200px;
+}
+h2{
+  text-align: center;
+}
+hr{
+  color: #4480a4;
+}
+#go{
+  color:black;
 }
